[gd_scene load_steps=9 format=3 uid="uid://rbiu8euqww6u"]

[ext_resource type="Script" path="res://Scripts/EndScreen.gd" id="1_2eyja"]
[ext_resource type="Texture2D" uid="uid://r8qafpvy8sio" path="res://Assets/star.png" id="1_gaqnh"]
[ext_resource type="Texture2D" uid="uid://1r1qp4ecewb5" path="res://Assets/time.png" id="2_qe7rq"]
[ext_resource type="Theme" uid="uid://kcnk43rkyg48" path="res://Assets/GameTheme.tres" id="4_2eg4k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_484tx"]
bg_color = Color(0.0980392, 0.0745098, 0.227451, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pb2gy"]
font_size = 42
font_color = Color(1, 1, 0.870588, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qtpal"]
font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0a7q3"]
bg_color = Color(0.396078, 0.345098, 0.741176, 1)

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2eyja")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.352
anchor_right = 0.648
anchor_bottom = 1.0
offset_left = -70.84
offset_right = 70.84
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_2eg4k")
theme_override_styles/panel = SubResource("StyleBoxFlat_484tx")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_2eg4k")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 0
text = "Congrats!"
label_settings = SubResource("LabelSettings_pb2gy")
horizontal_alignment = 1

[node name="Stars" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Star1box" type="VBoxContainer" parent="Panel/VBoxContainer/Stars"]
layout_mode = 2

[node name="Star1" type="TextureRect" parent="Panel/VBoxContainer/Stars/Star1box"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("1_gaqnh")
expand_mode = 1
stretch_mode = 5

[node name="StarTime1" type="Label" parent="Panel/VBoxContainer/Stars/Star1box"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme = ExtResource("4_2eg4k")
text = "0:00.00"
horizontal_alignment = 1

[node name="Star2box" type="VBoxContainer" parent="Panel/VBoxContainer/Stars"]
layout_mode = 2

[node name="Star2" type="TextureRect" parent="Panel/VBoxContainer/Stars/Star2box"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("1_gaqnh")
expand_mode = 1
stretch_mode = 5

[node name="StarTime2" type="Label" parent="Panel/VBoxContainer/Stars/Star2box"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme = ExtResource("4_2eg4k")
text = "0:00.00"
horizontal_alignment = 1

[node name="Star3box" type="VBoxContainer" parent="Panel/VBoxContainer/Stars"]
layout_mode = 2

[node name="Star3" type="TextureRect" parent="Panel/VBoxContainer/Stars/Star3box"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("1_gaqnh")
expand_mode = 1
stretch_mode = 5

[node name="StarTime3" type="Label" parent="Panel/VBoxContainer/Stars/Star3box"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme = ExtResource("4_2eg4k")
text = "0:00.00"
horizontal_alignment = 1

[node name="Time" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_2eg4k")
theme_override_font_sizes/font_size = 50
text = "Time Taken: "
label_settings = SubResource("LabelSettings_qtpal")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2

[node name="Leaderboard" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExampleBoard" type="PanelContainer" parent="Panel/VBoxContainer/ScrollContainer/Leaderboard"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0a7q3")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/ScrollContainer/Leaderboard/ExampleBoard"]
layout_mode = 2
alignment = 1

[node name="TimeSymbol" type="TextureRect" parent="Panel/VBoxContainer/ScrollContainer/Leaderboard/ExampleBoard/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_qe7rq")
expand_mode = 2

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/Leaderboard/ExampleBoard/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_2eg4k")
text = "0:00.00
"

[node name="StarSymbol" type="TextureRect" parent="Panel/VBoxContainer/ScrollContainer/Leaderboard/ExampleBoard/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_gaqnh")
expand_mode = 2

[node name="StarLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/Leaderboard/ExampleBoard/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_2eg4k")
text = "0
"

[node name="Buttons" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ContinueButton" type="Button" parent="Panel/Buttons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("4_2eg4k")
theme_override_font_sizes/font_size = 40
text = "Continue"

[node name="QuitButton" type="Button" parent="Panel/Buttons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("4_2eg4k")
theme_override_font_sizes/font_size = 40
text = "Quit"

[connection signal="pressed" from="Panel/Buttons/ContinueButton" to="." method="continueButton"]
[connection signal="pressed" from="Panel/Buttons/QuitButton" to="." method="quitButton"]
